# SimpleMusicPlayer

MusicPlayer/app/: build.gradle
MusicPlayer/app/src/androidTest/java/com/linhard/martin/musicplayer/: ExampleInstrumentedTest.kt
MusicPlayer/app/src/main/: AndroidManifest.xml
MusicPlayer/app/src/main/java/com/linhard/martin/musicplayer/: AlbumDetailActivity.kt  MainActivity.kt
MusicPlayer/app/src/main/java/com/linhard/martin/musicplayer/albumdetailactivity/: SongAdapter.kt  SongViewHolder.kt
MusicPlayer/app/src/main/java/com/linhard/martin/musicplayer/beans/: Album.kt  Song.kt
MusicPlayer/app/src/main/java/com/linhard/martin/musicplayer/mainactivity/: AlbumAdapter.kt  AlbumViewHolder.kt
MusicPlayer/app/src/main/res/layout/: activity_album_detail.xml  activity_main.xml  album_item.xml  music_player.xml  song_item.xml
MusicPlayer/app/src/test/java/com/linhard/martin/musicplayer/: ExampleUnitTest.kt
MusicPlayer/gradle/wrapper/: gradle-wrapper.properties
music_player_server/: Cargo.toml
music_player_server/src/: main.rs
music_player_server/src/data/: mod.rs
music_player_server/src/sound_server/: mod.rs
