[package]
name = "music_player_server"
version = "0.1.0"
authors = ["Martin Linhard <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
tokio = { version = "0.2", features = ["full"] }
actix-web = "2"
actix-rt = "1"
actix-web-actors = "2"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
